[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "if sys.version_info.*",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["yamltable"]

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3.6"]
description = "Command line utility for list organized YAML files."
homepage = "https://github.com/wolfgangwazzlestrauss/yamltable"
keywords = ["yaml"]
license = "MIT"
name = "yamltable"
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
jsonschema = "^3.2.0"
pyrsistent = "^0.14.11"
python = "^3.6.1"
pyyaml = "^5.3.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^20.8b1"
coverage = { version = "^5.3", extras = ["toml"] }
flake8 = "^3.8.4"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.0.2"
mkdocs-minify-plugin = "^0.3.0"
mkdocstrings = "^0.13.6"
mypy = "^0.782"
pre-commit = "^2.7.0"
py-spy = "^0.3.3"
pymdown-extensions = "^8.0.1"
pytest = "^6.1.1"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
toml = "^0.10.1"
tox = "^3.20.0"
typer-cli = "^0.0.10"

[tool.poetry.scripts]
yamltable = "yamltable.__main__:app"

[tool.pytest.ini_options]
addopts = "-sv"
markers = [
    "functional: mark as functional test.",
    "integration: mark as integration test.",
    "unit: mark as unit test.",
]
python_classes = "Test*"
python_files = [
    "__init__.py",
    "test_*.py",
]
python_functions = ["test_*"]
testpaths = ["tests"]
